# easy-extrude

./: .gitignore  .gitmodules  CLAUDE.md  README.md  ROADMAP.md  index.html  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.js
.claude/: DEVELOPMENT.md  KERNEL-INSTALL.md  MENTAL_MODEL.md  NEXT_SESSION.md  PROCESS_NOTES.md  VERSION  kernel-CLAUDE.md  kernel-log.md  settings.json  test-command
.claude/commands/: adr-validate.md  adr.md  gsn-maintain.md  qc.md  scaffold-project.md  session-log.md  sqa.md  ux.md  validate-all.md
.claude/hooks/: evidence-before-commit.sh
.claude/mental_model/: 1_architecture.md  2_interaction.md  3_ui_layout.md  3b_server_async.md  4_memory_management.md
.claude/rules/: 00-kernel.md  10-principles.md
.claude/templates/: CLAUDE.project-template.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
cli/: index.js
cli/commands/: compile.js  import.js  interpret.js
core/: README.md  pyproject.toml
core/easy_extrude_core/: __init__.py
core/easy_extrude_core/api/: __init__.py  __main__.py  app.py  errors.py  settings.py
core/easy_extrude_core/contract/: README.md  __init__.py  models.py  recommendation_models.py  scene_models.py  version.py
core/easy_extrude_core/engine/: __init__.py  candidates.py  feasibility.py  objectives.py  pipeline.py  pose_codec.py  scoring.py  types.py
core/easy_extrude_core/recommendation/: __init__.py  lane.py  normalization.py  ranking.py  similarity.py  types.py
core/easy_extrude_core/scene/: __init__.py  derivation.py  orchestration.py  settings.py  types.py
core/tests/: contract_pkg.py  test_api.py  test_contract.py  test_contract_conformance.py  test_engine.py  test_recommendation.py  test_recommendation_api.py  test_recommendation_contract.py  test_scene.py  test_scene_api.py  test_scene_contract.py  test_templates.py
core/tests/data/: grasp-req.json
docs/: ARCHITECTURE.md  CLAUDE_FABLE5_BEHAVIOR.md  CODE_CONTRACTS.md  CONCURRENCY.md  CONTEXT_MVP_SETUP.md  EVENTS.md  LAYOUT_DESIGN.md  NAVIGATION.md  PHILOSOPHY.md  ROADMAP.md  SCREEN_DESIGN.md  SESSION_LOG.md  SESSION_LOG_2026-03.md  STATE_TRANSITIONS.md  UX_TEST_CASES_SPATIALLINK.md
docs/adr/: ADR-001-voxel-based-shape-representation.md  ADR-002-two-modeling-methods.md  ADR-003-orbit-control-middle-click.md  ADR-004-edit-mode-adapts-to-object-type.md  ADR-005-object-hierarchy-dimensional-classification.md  ADR-006-right-click-cancel-context-menu.md  ADR-007-cuboid-based-shape-representation.md  ADR-008-mode-transition-state-machine.md  ADR-009-domain-entity-types-cuboid-sketch.md  ADR-010-domain-entity-behaviour-methods.md  ADR-011-application-service-scene-service.md  ADR-012-graph-based-geometry-model.md  ADR-013-domain-events-scene-service-observable.md  ADR-014-edit-mode-sub-element-selection.md  ADR-015-bff-microservices-architecture.md  ADR-016-transform-graph-scene-relationships.md  ADR-017-websocket-session-geometry-service.md  ADR-018-coordinate-frame-entity.md  ADR-019-coordinate-frame-phase-b.md  ADR-020-domain-entity-taxonomy-redesign.md  ADR-021-unified-local-geometry-graph-interface.md  ADR-022-undo-redo-command-pattern.md  ADR-023-mobile-input-model.md  ADR-024-mobile-toolbar-architecture.md  ADR-025-ifc-semantic-classification.md  ADR-026-lynch-urban-classification.md  ADR-027-wasm-geometry-engine.md  ADR-028-anchored-annotations-scene-graph.md  ADR-029-spatial-annotation-system.md  ADR-030-spatial-link.md  ADR-031-map-mode-interaction-model.md  ADR-032-geometric-host-binding.md  ADR-033-coordinate-frame-phase-c.md  ADR-034-coordinate-frame-placement-policy.md  ADR-035-fastened-chain-propagation.md  ADR-036-solid-arbitrary-rotation.md  ADR-037-body-frame-architecture.md  ADR-038-urdf-link-taxonomy.md  ADR-039-operation-state-machine.md  ADR-040-solid-data-model-redesign.md  (+52 more)
docs/code_contracts/: architecture.md  interaction.md  memory_management.md  server_async.md  ui_layout.md
docs/gsn/: adr-081-grasp-validation.gsn
docs/validation/: 2026-03-22-full-repo-validation.md  2026-03-22-improvement-plan.md  2026-03-22-phase-c.md  README.md
e2e/: smoke.spec.js
examples/: cell_conflict_context.json  cell_phase2_context.json  cell_region_context.json  cell_robotics_context.json  factory_context.json  factory_layout.json  layout_conveyor_line.json  layout_palletizing.json  layout_pick_place_cell.json
public/: coi-serviceworker.js
public/robot/: skeleton_arm.urdf
robotics-wasm/: CMakeLists.txt  README.md  robotics_engine.test.mjs
robotics-wasm/src/: bindings.cpp
schema/: README.md  context-0.4.schema.json  layout-1.0.schema.json  scene-1.3.schema.json
schema/tools/: validate.mjs
scripts/: build-robotics-wasm.sh  pre-commit  setup-toolchain.sh
server/: index.js  package-lock.json  package.json
server/src/: openapi.js
server/test/: grasp.contract.test.js  scenes.contract.test.js
src/: BootWiring.test.js  main.js
src/command/: AddAnnotationCommand.js  AddDocEntryCommand.js  AddDocEntryCommand.test.js  (+25 more)
templates/: README.md
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
(+325 files in other folders)
