[project]
name = "easy-extrude-core"
version = "0.1.0"
description = "Private core API for easy-extrude: grasp pose judgement engine (layer B)."
requires-python = ">=3.10"
# 契約の型定義 + バリデーションに pydantic を使う。
# contractVersion 不一致を実行時に弾く (ADR-001 の 400 規律) ために型=バリデータが要る。
# HTTP 境界 (ADR-003) は FastAPI。pydantic 既存依存と相性が良く、薄い境界に徹せる。
dependencies = [
    "pydantic>=2,<3",
    "fastapi>=0.110",
]

[project.optional-dependencies]
# ローカル/内部での起動用 ASGI サーバ (ADR-003 __main__)。実行時のみ必要。
serve = [
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8",
    # 中立スキーマ (@easy-extrude/grasp-contract) との突き合わせ用。
    "jsonschema>=4",
    # エンドポイント層の HTTP 往復テスト (TestClient) 用。
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["easy_extrude_core"]
